TODO
	* : Improve simplewc-msg functionality
	* : Code cleanup
	* : Tags should be renamed to virtual workspace (vws)

v0.3 -> v0.4 Changes
2025-05-30
	* src/main.c: Move main.c to proper location
	* src/input.c: Fix segfault on keyboard unplug
	* src/output.c: Cosmetic changes, add print_server_info() in a few places
	to update ipc calls
	* src/client.c: Remove hardcoded outline width. It will be twice the
	border_width

2025-05-14
	* src/output.c: Fix client relocation on output change
	* src/input.c: Do not render mouse pointer when it's constrained
	* src/client.c: Support placement of new clients (under mouse/cenetered/hybrid)
	* src/config.c: Add new config parameter new_client_placement

2025-04-26
	* meson.build: add pointer-constraints-unstable-v1 protocol 
	* src/input.c: implement wlr_pointer_constraints_v1
	* src/client.c: maximize client function changed to toggle_maximize, the
	client geometry will revert back to previous upon toggle
	* config/configrc: change maximize to toggle_maximize

2025-04-12
	* : Moving onto v0.4
	* README.md: Update for v0.4

v0.2 -> v0.3 Changes
2025-04-10:
	* main.c: Use wlr_log to print messages. Add info log level in addition to debug
	* include/globals.h: remove VISIBLEON macro
	* src/config.c: sloppy_focus to focus_type, supports none, sloppy, and raise
	* src/config.c: remove lock_cmd. Don't need it
	* src/config.c: don't exit without a default config
	* src/output.c: remove output-on/off function. Tools like wlopm do it better
	* src/output.c: Move clients upon removal of an output in
	output_destroy_notify()
	* src/input.c: Disable move/resize for fullscreen client
	* util/simplewc-msg.c: add --help flag

2025-04-09:
	* src/action.c: Add "toggle_fullscreen" to CLIENT action
	* src/client.c: Adding toggleClientFullscreen() and setClientFullscreen()
	which is also referenced by fullscreen_notify()
	* src/input.c: Adding wlr_relative_pointer_manager_v1
	* src/output.c: Add fullscreen layer support, e.g. LyrFS
