@@ -85,8 +85,4 @@ process_ipc_action(const char* action)
 {
    if(!strcmp(action, "test"))      say(INFO, "Action test");
    if(!strcmp(action, "quit"))      wl_display_terminate(g_server->display);
-   if(!strcmp(action, "reconfig"))  reloadConfiguration();
-
-   //if(!strcmp(action, "output_off"))   set_output_state(false);
-   //if(!strcmp(action, "output_on"))    set_output_state(true);
 }
